# satellite-plugin-sdk

./: .gitignore  AGENTS.md  README.md  meson.build  meson_options.txt
.cursor/skills/satellite-cli-plugin/: SKILL.md  reference.md
.cursor/skills/satellite-cli-plugin/scaffold/: README.md  meson.build.snippet
.cursor/skills/satellite-cli-plugin/scaffold/configs/plugins/: PLUGIN_NAME.json
.cursor/skills/satellite-cli-plugin/scaffold/samples/: PLUGIN_NAME_request.json
.cursor/skills/satellite-cli-plugin/scaffold/schemas/: PLUGIN_NAME.input.schema.json  PLUGIN_NAME.output.schema.json
.cursor/skills/satellite-cli-plugin/scaffold/src/PLUGIN_NAME/: PLUGIN_NAME.cpp  PLUGIN_NAME.hpp  main.cpp
.cursor/skills/satellite-cli-plugin/scaffold/wrapper/: PLUGIN_NAME.py  PLUGIN_NAME.sh
.cursor/skills/satellite-cli-plugin/scripts/: init_plugin.sh  smoke_plugin.sh
docs/: satellite-plugin-sdk.wrap.example
include/mp/common/: exit_codes.hpp  json_io.hpp
include/satellite/: cli_options.hpp  exit_codes.hpp  json_io.hpp  manifest.hpp  result_envelope.hpp  schema_validate.hpp
samples/: manifest.json
samples/archive/1.0/manifest/: access_compute.json
samples/archive/1.0/negative/: envelope_with_mission_id.json  mission_fields_against_1.0_schema.json  unknown_message_type.json
samples/archive/1.0/negative/manifest/: top_level_kind.json
samples/archive/1.0/result/: task_result.json
samples/canonical/negative/: data_product_bad_artifact_ref.json  delivery_receipt_missing_receiver.json  policy_decision_incomplete_breakdown.json  window_set_missing_node_id.json
samples/canonical/positive/: data_product.json  delivery_receipt.json  image_meta_set.json  policy_decision.json  time_window.json  window_set.json
samples/envelope/1.0/: task_submit.json
samples/envelope/1.1/: hr_submit.json  rd_submit.json  srd_submit.json  task_ack.json  task_ack_result.json  task_ack_result_minimal.json  task_bid.json  task_forward.json  task_offer.json  task_offer_downlink.json  task_query.json  task_query_result.json  task_receipt.json  task_result_reliable.json
samples/manifest/1.1/: compute_access.json  deliver_net.json  policy_select.json
samples/negative/1.1/: ack_unexpected_property.json  bid_capability_extra_property.json  bid_missing_round_id.json  forward_missing_message_id.json  forward_unexpected_property.json  hr_with_target_lla.json  invalid_binding_mode.json  mission_id_equals_task_id.json  mission_submit_with_payload.json  offer_invalid_access_time_model.json  offer_missing_access_time_model.json  offer_missing_round_id.json  offer_obsolete_access_time_field.json  offer_obsolete_constraint_duration_field.json  offer_obsolete_elapsed_start_field.json  offer_placeholder_extra_property.json  rd_with_execute_ip.json  result_status_no_result.json
samples/negative/manifest/1.0/: commands_status.json
samples/negative/manifest/1.1/: capabilities_extra_field.json  invalid_kind.json  missing_kind.json  unknown_top_level.json
samples/result/1.1/: bid_result.json  receipt_result.json  task_result.json
schemas/: plugin_manifest.1.1.schema.json  schema_registry.json  task_envelope.1.1.schema.json  task_result.1.1.schema.json
schemas/canonical/: cost_score.schema.json  data_product.schema.json  delivery_receipt.schema.json  image_meta.schema.json  image_meta_set.schema.json  policy_decision.schema.json  time_window.schema.json  window_set.schema.json
schemas/common/: binding.schema.json  envelope_header.1.1.schema.json  geo_point.schema.json  mission_params.schema.json  mission_params_by_task_type.1.1.generated.schema.json  mission_params_rules.1.1.json  origin.schema.json  receiver.schema.json  routing.schema.json  schedule.schema.json  time_range.schema.json
scripts/: contract-test.sh  generate_mission_params_rules.py
src/: cli_options.cpp  json_io.cpp  manifest.cpp  result_envelope.cpp  schema_validate.cpp
src/satellite/: cli_options.cpp  cli_options.hpp  exit_codes.hpp  json_io.cpp  json_io.hpp  manifest.cpp  manifest.hpp  mission_params_rules.generated.hpp  result_envelope.cpp  result_envelope.hpp  schema_validate.cpp  schema_validate.hpp
subprojects/: satellite-plugin-sdk.wrap
